--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -2,9 +2,15 @@ hydra:
   run:
     dir: ${exp_dir}
 
+# 根目录
 base_root: /root/arnold
-data_root: /vagrant/data
-asset_root: /vagrant
+# workspace目录
+workspace_root: ${base_root}/workspace
+# 数据目录
+data_root: ${workspace_root}/data
+# 资源目录
+asset_root: ${workspace_root}
+# 输出目录
 output_root: ${base_root}/output
 
 mode: train   # train or eval
@@ -29,7 +35,7 @@ save_interval: 10000
 resume: null   # checkpoint file to resume training
 use_gt: [False, False]
 visualize: False
-eval_splits: [test, novel_object, novel_scene, novel_state, any_state]
+eval_splits: [test, novel_object, novel_scene, novel_state, any_state]  # 
 record: False
 
 
